:heavy_check_mark: Finished Project

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="form-group">
-                    <button onclick="draw()">Sortear</button>
+                    <button type="button" onclick="draw()">Sortear</button>
                 </div>
 
                 <div class="form-result">
